@startuml Diagrama de Dominio - Logistica Ultima Milla

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho

title Diagrama de Dominio Completo

package "Gestion de Pedidos" <<Rectangle>> #LightBlue {
    class Pedido <<Aggregate Root>> {
        - pedido_id: str
        - canal: CanalOrigen
        - direccion_origen: Direccion
        - punto_origen_id: str
        - direccion_destino: Direccion
        - destinatario: ContactInfo
        - tipo_entrega: TipoEntrega
        - tipo_carga: TipoCarga
        - peso_estimado_kg: float
        - ventana_tiempo: str
        - repartidor_id: str
        - estado: EstadoPedido
        + validar()
        + asignar(repartidor_id)
        + iniciar_ruta()
        + entregar()
        + cancelar()
    }

    enum CanalOrigen {
        WEB
        APP_MOVIL
        ECOMMERCE
        PARTNER
    }

    enum TipoEntrega {
        NORMAL
        EXPRESS
        PROGRAMADA
    }

    enum TipoCarga {
        ESTANDAR
        FRAGIL
        VOLUMINOSO
    }
}

package "Gestion de Repartidores" <<Rectangle>> #LightGreen {
    class Repartidor <<Entity>> {
        - repartidor_id: str
        - nombre: str
        - capacidad: Capacidad
        - ubicacion: Ubicacion
        - disponible: bool
        - pedidos_asignados: list
        + asignar_pedido(pedido_id)
        + liberar_pedido(pedido_id)
        + tiene_capacidad: bool
    }

    class Capacidad <<Value Object>> {
        - max_pedidos: int
        - max_peso_kg: float
    }

    class Ubicacion <<Value Object>> {
        - latitud: float
        - longitud: float
        + distancia_a(otra): float
    }
}

package "Asignacion y Despacho" <<Rectangle>> #LightYellow {
    class Asignacion <<Entity>> {
        - asignacion_id: str
        - pedido_id: str
        - repartidor_id: str
        - fecha_asignacion: datetime
        - activa: bool
        + desactivar()
    }
}

package "Gestion de Rutas" <<Rectangle>> #LightCoral {
    class Ruta <<Entity>> {
        - ruta_id: str
        - pedidos: list
        - repartidor_id: str
        - secuencia_paradas: list
        + agregar_pedido()
        + ajustar_secuencia()
    }
}

package "Monitoreo y Tracking" <<Rectangle>> #Lavender {
    class EventoTracking <<Entity>> {
        - evento_id: str
        - pedido_id: str
        - tipo_evento: str
        - timestamp: datetime
        - ubicacion: Ubicacion
    }
}

package "Gestion de Incidencias" <<Rectangle>> #MistyRose {
    class Incidencia <<Aggregate Root>> {
        - incidencia_id: str
        - pedido_id: str
        - tipo: TipoIncidencia
        - descripcion: str
        - resolucion: Resolucion
        - estado: EstadoIncidencia
        + iniciar_analisis()
        + iniciar_resolucion()
        + resolver()
    }

    enum TipoIncidencia {
        PRODUCTO_NO_RECIBIDO
        PRODUCTO_DANADO
        ENTREGA_INCORRECTA
        RETRASO
        OTRO
    }

    class Resolucion <<Value Object>> {
        - descripcion: str
        - accion_tomada: str
        - requiere_reenvio: bool
    }
}

package "Shared Kernel" <<Rectangle>> #WhiteSmoke {
    class Direccion <<Value Object>> {
        - calle: str
        - numero: str
        - ciudad: str
        - comuna: str
        + es_valida(): bool
    }

    class ContactInfo <<Value Object>> {
        - nombre: str
        - telefono: str
        - email: str
        + tiene_medio_contacto(): bool
    }
}

' Relaciones
Pedido --> Direccion : origen/destino
Pedido --> ContactInfo : destinatario
Pedido --> CanalOrigen
Pedido --> TipoEntrega
Pedido --> TipoCarga

Repartidor --> Capacidad
Repartidor --> Ubicacion

Asignacion --> Pedido : pedido_id
Asignacion --> Repartidor : repartidor_id

Ruta --> Repartidor : repartidor_id
Ruta "1" o-- "*" Pedido : contiene

EventoTracking --> Pedido : pedido_id
EventoTracking --> Ubicacion

Incidencia --> Pedido : pedido_id
Incidencia --> TipoIncidencia
Incidencia --> Resolucion

@enduml
